# remix-sqlite-rust-sqlx

app/: README.md  package-lock.json  package.json  remix.config.js
app/app/: env.server.ts
app/app/db/: index.server.ts
app/app/routes/: index.tsx
db_adapter/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
db_adapter/bindings/: User.ts
db_adapter/migrations/: 20220516073216_init.sql
db_adapter/npm/linux-x64-gnu/: README.md  package.json
db_adapter/src/: lib.rs  types.rs
nginx/: Dockerfile  fly.toml  nginx.vh.default.conf  unpack_nchan.sh
scripts/: README.md  copy_native_addon.js  refresh_native_addon.sh  watch.sh
