[package]
edition = "2021"
name = "db_adapter"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.4.3", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.4.1"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }
# ts-rs = "6.1"

[build-dependencies]
napi-build = "2.0.0"

[profile.release]
lto = true
